--- a/views/mahasiswa/detailMatkul.ejs
+++ b/views/mahasiswa/detailMatkul.ejs
@@ -1,30 +1,57 @@
 <%- include('layout/header') %>
 <div class="container my-10 px-16 mt-12">
   <h1 class="text-3xl font-bold mb-4 text-center"><%= matkul.name %></h1>
-
   <div>
     <h2 class="text-lg font-semibold mb-2"><%= matkul.name %></h2>
     <p class="text-sm text-gray-600">SKS: <%= matkul.credit %></p>
     <p class="text-sm text-gray-600">Semester: <%= matkul.semester %></p>
-    <p class="text-sm text-gray-600">Kapasitas: 0/<%= matkul.capacity %></p>
-    <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, animi! Nemo ab dolores tempora culpa?
-      Iste repellat ratione porro odio esse explicabo, sit, cum obcaecati fugiat doloribus, temporibus iusto eius! Lorem
-      ipsum dolor sit amet consectetur adipisicing elit. Rerum vel ipsum, recusandae ducimus possimus dignissimos quas
-      corporis beatae quos accusantium ea molestias totam unde cum voluptate adipisci. Explicabo, suscipit! Nesciunt.
-    </p>
-
     <% if(!hasRegis && matkul.status==='active') { %>
       <div class="bg-red-500 text-white p-3 rounded mt-12 text-center">
         <p>Pendaftaran Sudah Ditutup</p>
       </div>
+    <% } else if(hasRegis && matkul.status==='active'){ %>
+      <div class="bg-green-500 text-white p-3 rounded mt-12 text-center">
+        <%  if(!hasUpload ){ %>
+        <p>Anda Telah Tergabung dengan matakuliah ini silahkan upload bukti pembayaran untuk konfirmasi pembayaran</p>
+        <p class="text-bold">Batas: <%= deadline %></p>
+        <p class="mt-4">note: jika melewati batas waktu anda akan dikeluarkan dari matakuliah ini, jika ada kendala silahkan hubungi departemen</p>
+        <% } else{ %>
+          <p>Anda Telah Mengupload Bukti pembayaran mohon tunggu verifikasi dari admin</p>
+        <% } %>
+      </div>
+      <div class="flex justify-center mt-8">
+        <div>
+          <h3 class="text-l mb-2 text-center">Silahkan Upload Bukti Pembayaran</h3>
+          <% if (error) { %>
+            <p class="text-center text-error mb-2"><%= error %></p>
+            <% } %>
+          <% if (success) { %>
+            <p class="text-center text-primary mb-2"><%= success %></p>
+            <% } %>
+          <form action="/mata-kuliah/daftar/<%= matkul.id %>/upload" method="post" enctype="multipart/form-data">
+            <div class="form-control w-full max-w-xs" id="file-input-container">
+              <% if (hasUpload && hasUpload.paymentProof) { %>
+                <p class="mt-2" id="uploaded-file-name"><%= hasUpload.paymentProof %></p>
+                <button type="button" class="btn btn-primary mt-4" id="upload-again-btn">Upload Ulang</button>
+              <% } else { %>
+                <div id="file-input-wrapper">
+                  <input type="file" id="paymentProof" name="paymentProof" class="file-input file-input-bordered w-full max-w-xs" />
+                  <div class="flex justify-center mt-4" id="upload-btn-container">
+                    <button type="submit" class="btn btn-primary">Upload</button>
+                  </div>
+                </div>
+              <% } %>
+            </div>
+          </form>
+        </div>
+      </div>
     <% } else if(!hasRegis) { %>
-      <!-- Tombol untuk membuka modal -->
       <div class="mt-16 ">
-      <% if (error){ %>
-        <p class="text-center text-error mb-2">Anda telah pencapai batas SKS</p>
-          <% } %>
-      <label for="konfirmasi-modal" class="btn btn-primary w-full  modal-button">Daftar</label>
-    </div>
+        <% if (error){ %>
+        <p class="text-center text-error mb-2">Anda telah mencapai batas SKS</p>
+        <% } %>
+        <label for="konfirmasi-modal" class="btn btn-primary w-full modal-button">Daftar</label>
+      </div>
       <!-- Modal Konfirmasi Pendaftaran -->
       <input type="checkbox" id="konfirmasi-modal" class="modal-toggle" />
       <div class="modal">
@@ -45,7 +72,22 @@
       </div>
     <% } %>
   </div>
-
 </div>
-
 <%- include('layout/footer') %>
+
+<script>
+  const fileInputContainer = document.getElementById('file-input-container');
+  const uploadedFileName = document.getElementById('uploaded-file-name');
+  const uploadAgainBtn = document.getElementById('upload-again-btn');
+  const fileInputWrapper = document.getElementById('file-input-wrapper');
+  const uploadBtnContainer = document.getElementById('upload-btn-container');
+
+  uploadAgainBtn.addEventListener('click', () => {
+    fileInputContainer.innerHTML = '<div id="file-input-wrapper"><input type="file" id="paymentProof" name="paymentProof" class="file-input file-input-bordered w-full max-w-xs" /><div class="flex justify-center mt-4" id="upload-btn-container"><button type="submit" class="btn btn-primary">Upload</button></div></div>';
+  });
+
+  // Menyembunyikan tombol "Upload" jika file sudah diupload
+  if (hasUpload && hasUpload.paymentProof) {
+    fileInputWrapper.style.display = 'none';
+  }
+</script>
