--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -21,8 +21,8 @@
             </a>
           </li>
           <li class="my-1 ">
-            <details <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah' ) { %> open <% } %>>
-              <summary class="py-3 <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah' ) { %> bg-primary text-primary-content rounded-lg my-1 <% } %>">
+            <details <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah'  ) { %> open <% } %>>
+              <summary class="py-3 <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah'|| page == 'Mahasiswa' ) { %> bg-primary text-primary-content rounded-lg my-1 <% } %>">
                 <hero-icon name="collection" class="" />
                 <span>Mata Kuliah</span>
                 <hero-icon name="chevron-down"  />
