--- a/views/mahasiswa/matkul.ejs
+++ b/views/mahasiswa/matkul.ejs
@@ -11,7 +11,7 @@
           <p class="text-sm text-gray-600">SKS: <%= m.credit %></p>
           <p class="text-sm text-gray-600">Semester:<%= m.semester %></p>
 
-          <p class="text-sm text-gray-600">Pendaftar: <%= m.dataValues.jumlahPendaftar%>/<%= m.capacity %></p>
+          <p class="text-sm text-gray-600">Pendaftar: <%= m.jumlahPendaftar%>/<%= m.capacity %></p>
 
         </div>
          
