--- a/views/mahasiswa/layout/header.ejs
+++ b/views/mahasiswa/layout/header.ejs
@@ -7,6 +7,10 @@
     <link rel="icon" href="/images/logounand.png" type="image/x-icon">
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <title><%= title %></title>
+    <script src="https://js.pusher.com/beams/1.0/push-notifications-cdn.js"></script>
+    <style>
+      .bell-icon .iconify-badge { color: red; }
+    </style>
   </head>
   <body class="min-h-screen flex flex-col">
 
