--- a/views/mahasiswa/layout/navbar.ejs
+++ b/views/mahasiswa/layout/navbar.ejs
@@ -31,8 +31,11 @@
           <% } %>
        
       <% if (role==="mahasiswa"){ %>
-        
-        <li > <a href="" class="text-xl">  <span class="iconify mx-1"data-icon="mdi:bell" data-inline="false"></span></a></li>
+        <li>
+          <a href="/notifikasi" class="text-xl relative">
+            <span id="notification-icon" class="iconify mx-1 text-white bell-icon" data-icon="mdi:bell" data-inline="false"></span>
+          </a>
+        </li>
       </ul>
         <div class="dropdown dropdown-end">
           <div
