--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -6,6 +6,7 @@
     <title>Admin</title>
     <link href="/stylesheets/output.css" rel="stylesheet" />
     <link rel="icon" href="/images/logounand.png" type="image/x-icon">
+    
   </head>
   <body class="h-screen ">
     <div class="flex  h-full">
@@ -21,8 +22,8 @@
             </a>
           </li>
           <li class="my-1 ">
-            <details <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah' ) { %> open <% } %>>
-              <summary class="py-3 <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah' ) { %> bg-primary text-primary-content rounded-lg my-1 <% } %>">
+            <details <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah'  ) { %> open <% } %>>
+              <summary class="py-3 <% if (page == 'Mata Kuliah' || page == 'Mata Kuliah Aktif' || page == 'Tambah Mata Kuliah' || page == 'Edit Mata Kuliah'|| page == 'Mahasiswa' ) { %> bg-primary text-primary-content rounded-lg my-1 <% } %>">
                 <hero-icon name="collection" class="" />
                 <span>Mata Kuliah</span>
                 <hero-icon name="chevron-down"  />
