--- a/views/mahasiswa/home.ejs
+++ b/views/mahasiswa/home.ejs
@@ -12,6 +12,10 @@
     <h1 class="text-5xl font-bold my-5 px-10">
       Pendaftaran Semester Pendek Jurusan Sistem Informasi
     </h1>
+<!--  -->
+
+
+<!--  -->
     <p class="py-6">Fakultas Teknologi Informasi Universitas Andelass</p>
     <div class="btn-group">
       <button class="btn btn-primary">Daftar</button>
@@ -19,6 +23,9 @@
     </div>
   </div>
 </div>
+<!--  -->
+<div id="notifikasi"></div>
+<!--  -->
 <div class="container my-10 px-16 mt-28">
   <div class="hero-content flex-col lg:flex-row-reverse mb-20">
     <img
@@ -29,6 +36,7 @@
       <h1 class="text-3xl font-bold">
         Pendaftaran Semester Pendek Jurusan Sistem Informasi
       </h1>
+
       <p class="py-6 text-justify">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quidem
         blanditiis hic fugiat cupiditate ducimus, vero temporibus obcaecati
