--- a/views/mahasiswa/home.ejs
+++ b/views/mahasiswa/home.ejs
@@ -3,7 +3,7 @@
 <div
   class="relative w-full h-screen bg-cover bg-center bg-no-repeat"
   style="
-    background-image: url('https://plus.unsplash.com/premium_photo-1669863280125-7789ef60adc0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-image: url('images/bgunand.jpg');
   "
 >
   <div
@@ -12,13 +12,20 @@
     <h1 class="text-5xl font-bold my-5 px-10">
       Pendaftaran Semester Pendek Jurusan Sistem Informasi
     </h1>
-    <p class="py-6">Fakultas Teknologi Informasi Universitas Andelass</p>
+<!--  -->
+
+
+<!--  -->
+    <p class="py-6">Fakultas Teknologi Informasi Universitas Andalas</p>
     <div class="btn-group">
       <button class="btn btn-primary">Daftar</button>
       <button class="btn btn-ghost">Lainnya</button>
     </div>
   </div>
 </div>
+<!--  -->
+<div id="notifikasi"></div>
+<!--  -->
 <div class="container my-10 px-16 mt-28">
   <div class="hero-content flex-col lg:flex-row-reverse mb-20">
     <img
@@ -29,6 +36,7 @@
       <h1 class="text-3xl font-bold">
         Pendaftaran Semester Pendek Jurusan Sistem Informasi
       </h1>
+
       <p class="py-6 text-justify">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quidem
         blanditiis hic fugiat cupiditate ducimus, vero temporibus obcaecati
