--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,5 +1,39 @@
 <%- include('layout/header') %>
-<!-- Konten utama di sini -->
-<h1 class="text-2xl font-bold mb-4 mt-6"><%= page %></h1>
-
+<div class="container mx-auto px-4 py-8">
+  <h1 class="text-2xl font-bold mb-4 mt-6 "><%= page %></h1>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="card bg-base-100 shadow">
+      <div class="card-body items-center text-center">
+        <h2 class="card-title">Mata Kuliah</h2>
+        <h1 class="text-4xl font-bold text-gray-500"><%= totalmatkul %></h1>
+      </div>
+    </div>
+    <div class="card bg-base-100 shadow">
+      <div class="card-body items-center text-center">
+        <h2 class="card-title">Mata Kuliah Aktif</h2>
+        <h1 class="text-4xl font-bold text-gray-500"><%= matkulaktif %></h1>
+      </div>
+    </div>
+    <div class="card bg-base-100 shadow">
+      <div class="card-body items-center text-center">
+        <h2 class="card-title">Mata Kuliah Nonaktif</h2>
+        <h1 class="text-4xl font-bold text-gray-500"><%= matkulnonaktif %></h1>
+      </div>
+    </div>
+  </div>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-6">
+    <div class="card bg-base-100 shadow">
+      <div class="card-body items-center text-center">
+        <h2 class="card-title">Pendaftar</h2>
+        <h1 class="text-4xl font-bold text-gray-500"><%= pendaftar %></h1>
+      </div>
+    </div>
+    <div class="card bg-base-100 shadow">
+      <div class="card-body items-center text-center">
+        <h2 class="card-title">Mahasiswa Aktif</h2>
+        <h1 class="text-4xl font-bold text-gray-500"><%= mhsaktif %></h1>
+      </div>
+    </div>
+  </div>
+</div>
 <%- include('layout/footer') %>
