--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -24,7 +24,7 @@
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-6">
     <div class="card bg-base-100 shadow">
       <div class="card-body items-center text-center">
-        <h2 class="card-title">Pendaftar</h2>
+        <h2 class="card-title">Pendaftaran</h2>
         <h1 class="text-4xl font-bold text-gray-500"><%= pendaftar %></h1>
       </div>
     </div>
