--- a/views/mahasiswa/layout/navbar.ejs
+++ b/views/mahasiswa/layout/navbar.ejs
@@ -20,7 +20,7 @@
           <% } %>
           
           >Daftar</a></li>
-        <li><a href="#" 
+        <li><a href="/informasi" 
           <% if(title === 'Informasi') {%>
             class="text-warning"
           <% } %>
